*Empty MediaWiki Message*

--- a/YouTube.mw
+++ b/YouTube.mw
@@ -11,7 +11,7 @@
 | label5 = 
 | data5 = 
 | label6 = Azemz n tlalit
-| data6 = 14 fuṛaṛ [[2005]]
+| data6 = 14 furar [[2005]]
 | label7 = Imesbeddiyen
 | data7 = [[Steve Chen]], [[Chad Hurley]] d [[Jawed Karim]]
 | label8 = Tadabut
@@ -32,7 +32,7 @@
 | data3 = [[JavaScript]], [[C (tutlayt)|C]], [[C++]], [[Python]]<ref>{{lien web |title=Google's Grumpy code makes Python Go |url=https://www.theregister.co.uk/2017/01/05/googles_grumpy_makes_python_go/ }} (s tenglizit) </ref>, [[Java (tutlayt)|Java]]<ref>{{lien web |title=Guice Deuce |url=http://googlecode.blogspot.no/2009/05/guice-deuce.html }} (s tenglizit)</ref>, [[Go]], [[Ruby]]
 | label4 = Anaw
 | data4 = 
-[[Azeṭṭa ametti]]<br>
+[[Aẓeṭṭa imetti]]<br>
 Asmel web n umaslan n tvidyutin
 | label5 = Tutlayt 
 | data5 = Agtutlayan (80 n tutlayin)<ref name="yt stats">https://www.youtube.com/yt/press/statistics.html. </ref>
@@ -48,7 +48,7 @@ Asmel web n umaslan n tvidyutin
 | data10 = 
 }}
 
-'''YouTube''' s [[taqbaylit|teqbaylit]] nezmer ad t-naru '''yutub''', d asmel web n umaslan (hébergemen) n tvidyutin am akken i yella daɣen d [[azeṭṭa ametti]] anda iseqdacen zemren ad aznen neɣ ad ẓren tividyutin, ad eǧǧen iwenniten, ṛṛay-nsen neɣ ad bḍun (ad zuzren) tividyutin.<br/>
+'''YouTube''' s [[taqbaylit|teqbaylit]] nezmer ad t-naru '''yutub''', d asmel web n umaslan (hébergemen) n tvidyutin am akken i yella daɣen d [[aẓeṭṭa imetti]] anda iseqdacen zemren ad aznen neɣ ad ẓren tividyutin, ad eǧǧen iwenniten, ṛṛay-nsen neɣ ad bḍun (ad zuzren) tividyutin.<br/>
 
 YouTube yettwarna-d deg fuṛaṛ 2005 sɣur [[Steve Chen]], [[Chad Hurley]] d [[Jawed Karim]], kraḍ (3) n ixeddamen iqdimen n [[PayPal]], tuɣal tewwi-ten [[Google]] ɣur-s deg ṭuber 2006 s 1.6 imelyaren n dulaṛ.<br/>
 
