*Empty MediaWiki Message*

--- a/Skype.mw
+++ b/Skype.mw
@@ -6,9 +6,9 @@
 | data2 = [https://skype.com/ skype.com/]
 | label3 = Anaw
 | data3 =
-[[Azeṭṭa ametti]]<br>
+[[Aẓeṭṭa imetti]]<br>
 Asmel web<br>
-Aseɣzan n usiwel deg uzeṭṭa IP
+Aseɣzan n usiwel deg uẓeṭṭa IP
 | label4 = Tutlayt
 | data4 = Agtutlayan
 | label5 = Yella s [[taqbaylit|teqbaylit]] 
