*Empty MediaWiki Message*

--- a/Vk.mw
+++ b/Vk.mw
@@ -5,7 +5,7 @@
 | label2 = Tansa url
 | data2 = https://vk.com
 | label3 = Anaw
-| data3 = [[Azeṭṭa ametti]]
+| data3 = [[Aẓeṭṭa imetti]]
 | label4 = Tutlayt
 | data4 = 96 tutlayin
 | label5 =Yella s [[taqbaylit|teqbaylit]]| 
