*Empty MediaWiki Message*

--- a/Tara.mw
+++ b/Tara.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Tara''' (Asget: Tiriwa), ([[Assaɣ ussnan]]: '''Vitis''') d [[Tawsit (tasnudert)|Tawsit]] n [[imɣi|yimɣan]] anda llant wazal n 60 n [[talmest|telmas]], Talmest ilan (yesɛan) azal akk gar-asent d [[tara n tẓurin]] yettwaẓẓun i wakken ad tefk [[tiẓurin]] 
+'''Tara''' (Asget: Tiriwa), ([[Assaɣ ussnan]]: '''Vitis''') d [[Tawsit (tudersent)|tawsit]] n [[imɣi|yimɣan]] anda llant wazal n 60 n [[talmest|telmas]], Talmest ilan (yesɛan) azal akk gar-asent d [[tara n tẓurin]] yettwaẓẓun i wakken ad tefk [[tiẓurin]]
 
 == Ideggan n wemɣay ==
 
