--- a/Tiẓurin.mw
+++ b/Tiẓurin.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Tiẓurin''' ([[Assaɣ ussenan]]: '''Grape''') d [[talmest]] n [[imɣi|yimɣan]] yeṭṭafaren [[Tawsit (tudersent)|tawsit]] n [[Tara]], Tara n tẓurin tettak-d [[igumma|agummu]] id y-ittekkren deg iguza (yal agazu dges aṭas n taqqayin) 
+'''Tiẓurin''' ([[Assaɣ ussnan]]: '''Grape''') d [[talmest]] n [[imɣi|yimɣan]] yeṭṭafaren [[Tawsit (tudersent)|tawsit]] n [[Tara]], Tara n tẓurin tettak-d [[igumma|agummu]] id y-ittekkren deg iguza (yal agazu dges aṭas n taqqayin)
 
 == Uẓu d ufares n tẓurin ==
 
