*Empty MediaWiki Message*

--- a/Ijqiwen.mw
+++ b/Ijqiwen.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Ijqiwen''' (Asuf: Ajqiw), ([[assaɣ usnan]]: ''Passerifores'') d yiwet n [[tafesna (tasnudert)|tfesna]] tameqrant s waṭas n [[Aylal|iylalen]] dgi yettwaqqen ar ɣures Azgen n [[talmest|telmas]] n iylalen s wazal n 5400 n telmas
+'''Ijqiwen''' (Asuf: '''Ajqiw'''), ([[assaɣ usnan]]: '''Passerifores''') d yiwet n [[tafesna (tasnudert)|tfesna]] tameqrant s waṭas n [[Aylal|iylalen]] dgi yettwaqqen ar ɣures Azgen n [[talmest|telmas]] n iylalen s wazal n 5400 n telmas
 
 == Tasartut d usismel ==
 
