--- a/Azerkeṭṭif.mw
+++ b/Azerkeṭṭif.mw
@@ -1,5 +1,6 @@
 {{Databox}}
-''''Azerkeṭṭif''' neɣ '''Aseqsaq''' d [[assaɣ imezdi]] id yesskanayen aṭas n [[talmest|telmas]] n [[aylal|yigṭaṭ]], Deg [[Turuft|Uruppa]] d [[Tamurt n Leqbayel|Tmurt n Yiqbayliyen]] yesskanay-d [[abbar|Azerkeṭṭif aberkan]] s talɣa tagejdant yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[ikayaten]], Maca isem-a yezmer daɣen ad yessken aṭas n telmas, n [[tawsit (tudersent)|tewsitin]] d [[tawacult (tasnudert)|twaculin]] nniden
+
+'''Azerkeṭṭif''' neɣ '''Aseqsaq''' d [[assaɣ imezdi]] id yesskanayen aṭas n [[talmest|telmas]] n [[aylal|yigṭaṭ]], Deg [[Turuft|Uruppa]] d [[Tamurt n Leqbayel|Tmurt n Yiqbayliyen]] yesskanay-d [[abbar|Azerkeṭṭif aberkan]] s talɣa tagejdant yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[ikayaten]], Maca isem-a yezmer daɣen ad yessken aṭas n telmas, n [[tawsit (tudersent)|tewsitin]] d [[tawacult (tasnudert)|twaculin]] nniden
 
 == Umuɣ n izerkeṭṭifen ==
 * [[Asudder asaqsaq]]  ([[Asudder asaqsaq|Hypsipetes crassirostris]], seg twacult n [[Asudder|usudder]]), Talmest-a tettidir di Tmurt n [[Seychelles]]
