--- a/Aseqsaq.mw
+++ b/Aseqsaq.mw
@@ -1,4 +1,25 @@
 {{Automatic taxobox}}
 '''Azerkeṭṭif''' neɣ '''aberkan Abbar''' neɣ '''Aseqsaq''' ([[Assaɣ ussnan]]: '''Turdus merula''') yettwassnen s umata [[Azerkeṭṭif]], d [[talmest]] n [[ijqiwen]] yeṭṭafaren [[Tawacult (tasnudert)|tawacult]] n [[ikayaten]] 
 
-Talmest-a n izerkeṭṭifen tettidir deg [[Turuft|Uruppa]], [[Asya]] d [[Tafriqt n Ugafa|Tefriqt Ugafa]]. Akken daɣen yettwasekcem ar Tmurt n [[Ustṛalya]] d [[Ziland Tamaynut|New Ziland]]. Llant waṭas n [[adu-telmest|tdulemsin]] n izerkeṭṭifen deg tjummiwin i meqqren
+Talmest-a n izerkeṭṭifen tettidir deg [[Turuft|Uruppa]], [[Asya]] d [[Tafriqt n Ugafa|Tefriqt Ugafa]]. Akken daɣen yettwasekcem ar Tmurt n [[Ustṛalya]] d [[Ziland Tamaynut|New Ziland]]. Llant waṭas n [[adu-telmest|tdulemsin]] n izerkeṭṭifen deg tjummiwin i meqqren. Azerkeṭṭif yezmer ad yili d [[tinigt n iylalen|iminig]] neɣ arminig (Ur yettinig ara) 
+
+== Tasnileɣt ==
+
+
+== Tikeli ==
+
+
+== Asru ==
+
+
+== Imihiyen igamanen d usirem n tudert ==
+
+
+== Azerkeṭṭif deg yidles ==
+
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:iylalen]]
+[[Taggayt:igṭaṭ]]
+[[Taggayt:iɣersiwen]]
