*Empty MediaWiki Message*

--- a/Azerkeṭṭif.mw
+++ b/Azerkeṭṭif.mw
@@ -4,4 +4,8 @@
 
 == Umuɣ n izerkeṭṭifen ==
 * [[Asudder asaqsaq]]  ([[Asudder asaqsaq|Hypsipetes crassirostris]], seg twacult n [[Asudder|usudder]]), Talmest-a tettidir di Tmurt n [[Seychelles]]
+* [[Azerkeṭṭif abissinay]] (Turdus abyssinicus) 
+* [[Butezra]] ― (Turdus torquatus)
+* [[Tareẓẓazt]] ― (Monticola solitarius)
+* [[Azerkeṭṭif aras]] — (Turdus grayi)
 *
