*Empty MediaWiki Message*

--- a/Azerkeṭṭif.mw
+++ b/Azerkeṭṭif.mw
@@ -4,8 +4,10 @@
 
 == Umuɣ n izerkeṭṭifen ==
 * [[Asudder asaqsaq]]  ([[Asudder asaqsaq|Hypsipetes crassirostris]], seg twacult n [[Asudder|usudder]]), Talmest-a tettidir di Tmurt n [[Seychelles]]
+* [[Azerkeṭṭif aberkan|Aseqsaq]] — (Turdus merula)
 * [[Azerkeṭṭif abissinay]] (Turdus abyssinicus) 
 * [[Butezra]] ― (Turdus torquatus)
 * [[Tareẓẓazt]] ― (Monticola solitarius)
 * [[Azerkeṭṭif aras]] — (Turdus grayi)
-*
+* [[Agaman]] — (Cinclus cinclus)  (seg twacult n [[Agaman (tawacult)|Cinclidae]])
+* [[Azerkeṭṭif iwṛiɣ]] — (Turdus pallidus)
