*Empty MediaWiki Message*

--- a/Aylal.mw
+++ b/Aylal.mw
@@ -9,7 +9,7 @@
 *{{extinct}}[[Ichthyornithes]]
 *[[Neornithes]]}}
 
-'''Aylal''' ('''[[Assaɣ ussnan]]''': ''Aves'') d [[aɣersiw]] ittafgen deg [[igenni]] s [[afriw|ifariwen]]. Yettwassen s [[afraw|ifrawen]] yesdurayen [[tafekka|tafekka-ynes]] d [[aqamum|uqamum-is]] ur nli (ur nesɛi) [[tuɣmest|tuɣmas]] d useusay n [[Tamellalt|tmellalin]] ilan (yesɛan) [[iclem|icelman]] uffiɣen izuranen, d [[ajgu n uzagur|ujgu n uzagur]] meẓẓiyen fsuse, iylalen ttidiren deg yal ideg deg [[tagnit|tegnit]], [[Ableɣ|ibelɣen-is]] mgaradent seg umeẓyan ar umeqran s waṭas
+'''Aylal''' neɣ '''Agṭiṭ''' ('''[[Assaɣ ussnan]]''': ''Aves'') d [[aɣersiw]] ittafgen deg [[igenni]] s [[afriw|ifariwen]]. Yettwassen s [[afraw|ifrawen]] yesdurayen [[tafekka|tafekka-ynes]] d [[aqamum|uqamum-is]] ur nli (ur nesɛi) [[tuɣmest|tuɣmas]] d useusay n [[Tamellalt|tmellalin]] ilan (yesɛan) [[iclem|icelman]] uffiɣen izuranen, d [[ajgu n uzagur|ujgu n uzagur]] meẓẓiyen fsuse, iylalen ttidiren deg yal ideg deg [[tagnit|tegnit]], [[Ableɣ|ibelɣen-is]] mgaradent seg umeẓyan ar umeqran s waṭas
 
 == Tanekra d temhazt d usismel==
 [[Tasensartut (tasnudert)|tasensartut tusnant]] tamezwarut tamirant i waylalen tettusers-d seg ifassen n sin imusnawen n Legniz [[John Ray]] d [[Francis Willoughby]] deg uskar nsen deg useggas n 1676 s uzwel n [[Tusna n iylalen]] (s [[Talatint|Tlatint]] ''Ornithologiae'')
