*Empty MediaWiki Message*

--- a/Tareẓẓazt_tazegzawt.mw
+++ b/Tareẓẓazt_tazegzawt.mw
@@ -5,7 +5,7 @@ Tafekka n wejqiw-a d tin yeččuren. Iga d agṭiṭ [[tinigt n iylalen|iminig]]
 
 == Aglam ==
 ===Tugna=== 
-[[Tugna:Blue rock thrush (male) at Gamla Nature Reserve.jpg|[[Awtem]] n treẓẓazt deg Tama n [[Gamla]] di Tmurt n Yisrayel- Yennayer 2019]]
+[[Tugna:Blue rock thrush (male) at Gamla Nature Reserve.jpg|Thumb|250px|[[Awtem]] n treẓẓazt deg Tama n [[Gamla]] di Tmurt n Yisrayel deg Yennayer 2019]]
 
 Tiddi-ynes tga gar n 21 ar 23 cm, [[azuk|Azuk-is]] gar n 37 ar 54 g. [[Afraw]] n [[Awtem|uwtem]] iga d Azegzaw azunɣid, war tamuɣli ar [[afriw|wafriwen-is]] d [[asallaf|usallaf-is]] igan d imsullsen (qessiḥ-it) ugar. [[Tawtemt]] d yifrax gan d irasen (iqahwiyen)
 
