*Empty MediaWiki Message*

--- a/Azerkeṭṭif.mw
+++ b/Azerkeṭṭif.mw
@@ -1,4 +1,4 @@
-[[Tugna:Turdus Merula in Saint Sernin Croped.jpg|Thumb|250|[[Azerkeṭṭif aberkan]] d yiwet n telmest n izerkeṭṭifen]]
+[[Tugna:Turdus Merula in Saint Sernin Croped.jpg|Thumb|250px|[[Azerkeṭṭif aberkan]] d yiwet n telmest n izerkeṭṭifen]]
 
 '''Azerkeṭṭif''' neɣ '''Aseqsaq''' d [[assaɣ imezdi]] id yesskanayen aṭas n [[talmest|telmas]] n [[aylal|yigṭaṭ]], Deg [[Turuft|Uruppa]] d [[Tamurt n Leqbayel|Tmurt n Yiqbayliyen]] yesskanay-d [[Azerkeṭṭif aberkan]] s talɣa tagejdant yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[ikayaten]], Maca isem-a yezmer daɣen ad yessken aṭas n telmas, n [[tawsit (tudersent)|tewsitin]] d [[tawacult (tasnudert)|twaculin]] nniden
 
