*Empty MediaWiki Message*

--- a/Timerguyin.mw
+++ b/Timerguyin.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Ikayaten''' ([[Assaɣ ussnan]]: '''Turdidae''') d [[Tawacult (tasnudert)|tawacult]] n [[ijqiwen]] dges 17 n [[tawsit (tasnudert)|tewsitin]] d ugar n 167 n [[talmest|telmas]] 
+'''Ikayaten''' ([[Assaɣ ussnan]]: '''Turdidae''') d [[Tawacult (tudersent)|tawacult]] n [[ijqiwen]] dges 17 n [[tawsit (tasnudert)|tewsitin]] d ugar n 167 n [[talmest|telmas]]
 
 == Aẓaṛ n wawal ==
 
