*Empty MediaWiki Message*

--- a/Azerkeṭṭif.mw
+++ b/Azerkeṭṭif.mw
@@ -9,5 +9,5 @@
 * [[Butezra]] ― (Turdus torquatus)
 * [[Tareẓẓazt]] ― (Monticola solitarius)
 * [[Azerkeṭṭif aras]] — (Turdus grayi)
-* [[Agaman]] — (Cinclus cinclus)  (seg twacult n [[Agaman (tawacult)|Cinclidae]])
+* [[Agaman (agṭiṭ)|Agaman]] — (Cinclus cinclus)  (seg twacult n [[Agaman (tawacult)|Cinclidae]])
 * [[Azerkeṭṭif iwṛiɣ]] — (Turdus pallidus)
