*Empty MediaWiki Message*

--- a/Amaklas.mw
+++ b/Amaklas.mw
@@ -1,6 +1,6 @@
 {{Automatic taxobox}}
-'''Imaklasen''' (Asget: '''Amaklas'''), ([[Assaɣ ussnan]]: '''Cricetinae''') d [[adu-twacult]] meẓẓiyen n [[timseɣẓaẓ|temseɣẓaẓ]] yettemcabin [[aɣeṛda|iɣerdayen]], aṭas seg [[talmest|telmas-is]] tt[[agrad|wagraden-t]] deg kra n tmura am tid n [[Turuft|Uruppa]] d Marikan, Yettwassnen d akken ila (yesɛa) [[awsi|iwsan]] (lejyub) deg [[imi|imi-ynes]] i wakken ad yeffer deg-sen učči
+'''Imaklasen''' (Asuf: '''Amaklas'''), ([[Assaɣ ussnan]]: '''Cricetinae''') d [[adu-twacult]] meẓẓiyen n [[timseɣẓaẓ|temseɣẓaẓ]] yettemcabin [[aɣeṛda|iɣerdayen]], aṭas seg [[talmest|telmas-is]] tt[[agrad|wagraden-t]] deg kra n tmura am tid n [[Turuft|Uruppa]] d Marikan, Yettwassnen d akken ila (yesɛa) [[awsi|iwsan]] (lejyub) deg [[imi|imi-ynes]] i wakken ad yeffer deg-sen učči
 
-Adu-twacult-a llant dges wazal n 25 n [[talmest|telmas]] yeṭṭafaren 7 n [[tawsit (tudersent)|tewsitin]] 
+Adu-twacult-a llant dges wazal n 25 n [[talmest|telmas]] yeṭṭafaren 7 n [[tawsit (tudersent)|tewsitin]]
 
 == Assiseɣ d wesru ==
