*Empty MediaWiki Message*

--- a/Icidi.mw
+++ b/Icidi.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Icidi''' (yettwassnen s '''tebbib''' ([[Assaɣ ussnan]]: '''Upupa epops''') d yiwet n [[talmest|telmest]] n [[aylal|yigṭaṭ]], icidi iga d yiwen gar 3 n igmanen n [[tawacult (tasnudert)|twacult]] n [[ticidiyin|tcidiyin]]. Snat n telmas nniden gan-t d [[icidi n Tefriqt]] yakk d [[icidi n Madagasker]] dɣa seg zik llant ttumeggzent (ttwaḥsaben-t) d [[adu-telmest|idutlemsin]] n icidi 
+'''Icidi''' (yettwassnen s '''tebbib'''), ([[Assaɣ ussnan]]: '''Upupa epops''') d yiwet n [[talmest|telmest]] n [[aylal|yigṭaṭ]], icidi iga d yiwen gar 3 n igmanen n [[tawacult (tasnudert)|twacult]] n [[ticidiyin|tcidiyin]]. Snat n telmas nniden gan-t d [[icidi n Tefriqt]] yakk d [[icidi n Madagasker]] dɣa seg zik llant ttumeggzent (ttwaḥsaben-t) d [[adu-telmest|idutlemsin]] n icidi
 
 == Tikeli ==
 
