*Empty MediaWiki Message*

--- a/Amaklas.mw
+++ b/Amaklas.mw
@@ -4,3 +4,8 @@
 Adu-twacult-a llant dges wazal n 25 n [[talmest|telmas]] yeṭṭafaren 7 n [[tawsit (tudersent)|tewsitin]]
 
 == Assiseɣ d wesru ==
+Akin-a igburen (ayen yellan) deg [[tawacult (tasnudert)|twacult]] n [[timaklasin|timaklasin]] (Muridae) yettwassers d tid nniden yellan deg [[adu-twacult|wadu-twacult]] n [[Taɣeṛdayt|tɣeṛdayt]] (Muridae) maca tizrawin tineggura malen-t ar wakken ad akzen-t 6 n twaculin. Anda [[timaklasin]] gan-tent d [[afeltwacult]] n [[timseɣẓaẓ|temseɣẓaẓ]]
+
+Kra n tluganin am [[Anagraw n isalan imessartiyen ummid|ITIS]] zeddiɣ (mazal) yesẓunay [[taɣeṛdayt|tiɣerdayin]] deg wadu-twaculin kan
+
+===Umuɣ n tewsitin===
