*Empty MediaWiki Message*

--- a/Amaklas.mw
+++ b/Amaklas.mw
@@ -9,3 +9,6 @@ Akin-a igburen (ayen yellan) deg [[tawacult (tasnudert)|twacult]] n [[timaklasin
 Kra n tluganin am [[Anagraw n isalan imessartiyen ummid|ITIS]] zeddiɣ (mazal) yesẓunay [[taɣeṛdayt|tiɣerdayin]] deg wadu-twaculin kan
 
 ===Umuɣ n tewsitin===
+[[Adu-twacult|Tadu-twaculta]] sebɛa ɣef 7 n [[tawsit (tudersent)|tewsitin]] s unect (ɛla ḥsab) n [[Asismel n Linné|usismel n Linné]]:
+
+S unect n [[Anagraw n isalan imessartiyen ummid|ITIS]] (31 tub. 2010), Animal Diversity Web|ADW]] (14 Mayu 2011) d [[Mammal Species of the World]] (alqem 3, 2005) (14 mayu 2011):
