*Empty MediaWiki Message*

--- a/Amaklas.mw
+++ b/Amaklas.mw
@@ -12,3 +12,36 @@ Kra n tluganin am [[Anagraw n isalan imessartiyen ummid|ITIS]] zeddiɣ (mazal) y
 [[Adu-twacult|Tadu-twaculta]] sebɛa ɣef 7 n [[tawsit (tudersent)|tewsitin]] s unect (ɛla ḥsab) n [[Asismel n Linné|usismel n Linné]]:
 
 S unect n [[Anagraw n isalan imessartiyen ummid|ITIS]] (31 tub. 2010), Animal Diversity Web|ADW]] (14 Mayu 2011) d [[Mammal Species of the World]] (alqem 3, 2005) (14 mayu 2011):
+
+* Tawsit n [[Allocricetulus]] Argyropulo, 1933 - 2 n telmas
+* Tawsit n [[Amaklas n Gansu|Cricetulus]] Allen, 1928 - yiwet n telmest
+* Tawsit n [[Amaklas ugzil|Cricetulus]] Milne-Edwards, 1867 - 7 n telmas
+* Tawsit n [[Amaklas imezdi (tawsit)|Cricetus]] Leske, 1779 - yiwet n telmest tgad [[Amaklas imezdi]] 
+* Tawsit n [[Amaklas ulmis|Mesocricetus]] Nehring, 1898 - 4 n telmas, gar-asent [[Amaklas uṛɣan]] 
+* Tawsit n [[Phodopus]] Miller, 1910 - 3 n telmas
+
+== Tiskanin timezdiyin ==
+Yal [[talmest]] n imaskalen tla (tesɛa) taskant. ama deg yimgaraden deg tfekka, deg tiddi, deg tkeli neɣ ula deg ideg n tudert agaman  
+
+===Tasnileɣt===
+
+
+===Asedger===
+
+===Učči===
+
+===Amyaraw===
+
+
+== Tiremt tareygmant ==
+
+== [[Agrad]] ==
+
+== Amaklas deg yidles == 
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Iɣersiwen imegruden]]
+[[Taggayt:Iɣersiwen]]
+[[Taggayt:Timsuṭad]]
+[[Taggayt:Timaklasin]]
