*Empty MediaWiki Message*

--- a/Afeltwacult.mw
+++ b/Afeltwacult.mw
@@ -1,4 +1,4 @@
-'''Afeltwacult]] deg [[tasnudert|tesnudert]] d aswir amnummsan (ulmis). Deg [[tasartut n tesnudert|tsartut n tesnudert]] tga d yiwet n tseddart n [[tawacult (tasnudert)|twacult]] akken daɣen i tga d [[adras amessarti]] gar n [[tawacult (tasnudert)|twacult]] d [[tafesna (tasnudert)|tfesna]]
+'''Afeltwacult''' deg [[tasnudert|tesnudert]] d aswir amnummsan (ulmis). Deg [[tasartut n tesnudert|tsartut n tesnudert]] tga d yiwet n tseddart n [[tawacult (tasnudert)|twacult]] akken daɣen i tga d [[adras amessarti]] gar n [[tawacult (tasnudert)|twacult]] d [[tafesna (tasnudert)|tfesna]]
 
 == Idrasen imessartiyen nniden ==
 
