*Empty MediaWiki Message*

--- a/Amaklas_ugzil.mw
+++ b/Amaklas_ugzil.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Amaklas n Gansu''' ([[Assaɣ ussnan]]: '''Cricetulus''') d [[tawsit (tudersent)|tawsit]] n [[Amaklas|imaklasen]] igezlanen ilan [[asallaf]] meqqee (2 ar 3 cm) 
+'''Amaklas ugzil''' ([[Assaɣ ussnan]]: '''Cricetulus''') d [[tawsit (tudersent)|tawsit]] n [[Amaklas|imaklasen]] igezlanen ilan [[asallaf]] meqqee (2 ar 3 cm)
 
 == Umuɣ n telmas ==
 * [[Amaklas n Ladakh]] (''Cricetulus alticola'') Thomas, 1917
