--- a/Amaklas.mw
+++ b/Amaklas.mw
@@ -14,7 +14,7 @@ Kra n tluganin am [[Anagraw n isalan imessartiyen ummid|ITIS]] zeddiɣ (mazal) y
 S unect n [[Anagraw n isalan imessartiyen ummid|ITIS]] (31 tub. 2010), Animal Diversity Web|ADW]] (14 Mayu 2011) d [[Mammal Species of the World]] (alqem 3, 2005) (14 mayu 2011):
 
 * Tawsit n [[Allocricetulus]] Argyropulo, 1933 - 2 n telmas
-* Tawsit n [[Amaklas n Gansu|Cricetulus]] Allen, 1928 - yiwet n telmest
+* Tawsit n [[Amaklas n Gansu (tawsit)|Cansumys]] Allen, 1928 - yiwet n telmest
 * Tawsit n [[Amaklas ugzil|Cricetulus]] Milne-Edwards, 1867 - 7 n telmas
 * Tawsit n [[Amaklas imezdi (tawsit)|Cricetus]] Leske, 1779 - yiwet n telmest tgad [[Amaklas imezdi]] 
 * Tawsit n [[Amaklas ulmis|Mesocricetus]] Nehring, 1898 - 4 n telmas, gar-asent [[Amaklas uṛɣan]] 
