*Empty MediaWiki Message*

--- a/Amaklas_imezdi_(tawsit).mw
+++ b/Amaklas_imezdi_(tawsit).mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Amaklas imezdi''' ([[Assaɣ ussnan]]: '''Cricetus''') d [[tawsit (tudersent)|tawsit]] n [[[[Amaklas|imaklasen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[timaklasin|tmaklasin]] deg [[tafesna (tasnudert)|tfesna]] n [[timseɣẓaẓ|temseɣẓaẓ]], dɣa iga d agensas amyiwen n [[taɣreft (Tasartut)|teɣreft]] n '''Cricetini''' 
+'''Amaklas imezdi''' ([[Assaɣ ussnan]]: '''Cricetus''') d [[tawsit (tudersent)|tawsit]] n [[Amaklas|imaklasen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[timaklasin|tmaklasin]] deg [[tafesna (tasnudert)|tfesna]] n [[timseɣẓaẓ|temseɣẓaẓ]], dɣa iga d agensas amyiwen n [[taɣreft (Tasartut)|teɣreft]] n '''Cricetini'''
 
 == Taẓuni ==
 
