*Empty MediaWiki Message*

--- a/Amaklas.mw
+++ b/Amaklas.mw
@@ -27,6 +27,9 @@ Yal [[talmest]] n imaskalen tla (tesɛa) taskant. ama deg yimgaraden deg tfekka,
 
 
 ===Asedger===
+Imaskalen d iɣersiwen yeṭṭfen asedger arakal agaman deg [[Tafriqt n Ugafa|Tefriqt Ugafa]], kra n izegnan n [[Turuft|Uruppa]], deg [[asamar alemmas|usamer alemmas]] ar usamer n [[Sibirya]] yakk d [[Ccinwa]]
+
+Yakk tilmas n imaskalen zdint deg tudert tagamant deg tegnatin d izaɣaren yeldin neɣ iɣuranen am [[taneẓruft|tneẓruft]], [[azaweɣ|izawaɣen]], [[iger|igran]] ... Atg
 
 ===Učči===
 
