*Empty MediaWiki Message*

--- a/Amaklas_imezdi.mw
+++ b/Amaklas_imezdi.mw
@@ -3,7 +3,18 @@
 
 == Aglam ==
 ===Tasnileɣt===
-[[Tugna:Cricetus cricetus - (Lubin, Poland)-cropped.jpg|thumb|left|alt=Amaklas imezdi yeffeɣ-d seg wegnu-ynes|[[Asalaf]] n umaklas imezdi d win meẓẓiyen.]]
+[[Tugna:Cricetus cricetus - (Lubin, Poland)-cropped.jpg|thumb|left|alt=Amaklas imezdi yeffeɣ-d seg wegnu-ynes|[[Asallaf]] n umaklas imezdi d win meẓẓiyen.]]
+
+Amaklas imezdi d win ilan (yesɛan) [[asallaf]] meẓẓiyen, imeẓẓaɣ-is meqqr-it s imik (cwiṭ), Aẓlum-is s 3 n [[ini|yiniten]] (amellal d uzeggaɣ s afella d uberkan deg wadda) <br/>
+Amawaṭ n umaklas imezdi yettili-d [[azuk|wazuk-is]] gar n 220 ar 460 g (azal afellay deg 150 ar 500 g), Teɣzi n [[tafekka|tfekka-s]] 20 cm ma d asallaf-is 5 cm 
+
+===Amyaraw===
+
+===Tikeli===
+
+== Taẓuni ==
+
+== Amezruy, d waddad n taggaẓt ==
 
 == Ẓeṛ daɣen ==
 * [[Amaklas]]
