--- a/Amaklas_imezdi.mw
+++ b/Amaklas_imezdi.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Amaklas imezdi''' ([[Assaɣ ussnan]]: '''Cricetus cricetus''') dc[[talmest]] meẓẓiyen n [[Amaklas|imaklasen]] yaṭṭafaren [[tafesna (tasnudert)|tafesn]] n [[timseɣẓaẓ|temseɣẓaẓ]]. Talmest-a n imaklasen tettidir deg [[Turuft|Uruppa]] d [[Asya]]. Iga d [[ameklas]] ig meqqren akk yerna d talmest tamyaddart (n tallit-a) tamyiwent n [[tawsit (tudersent)|tewsit]] n [[Amaklas imezdi (tawsit)|''Cricetus'']] akken daɣen iga d talmest tamyiwent yettidiren s talɣa tazagrant (Sauvage) deg Uruppa tutrimt, Ɣas akken llan-d waṭas n isegduyen (Mesures) i taggaẓt d usnerni n telmest-a maca deg useggas n 2009 tettwameggez d akken-it (d yiwet gar n telmas n [[Timsuṭad|tesuṭaṭ]] yettwaggzen yakk s waṭas s umihi n [[angaw|wengar]]) s unect (ɛla ḥsab) n [[tasmilt n Uruppa|tesmilt n Uruppa]] 
+'''Amaklas imezdi''' ([[Assaɣ ussnan]]: '''Cricetus cricetus''') dc[[talmest]] meẓẓiyen n [[Amaklas|imaklasen]] yaṭṭafaren [[tafesna (tasnudert)|tafesn]] n [[timseɣẓaẓ|temseɣẓaẓ]]. Talmest-a n imaklasen tettidir deg [[Turuft|Uruppa]] d [[Asya]]. Iga d [[amaklas]] ig meqqren akk yerna d talmest tamyaddart (n tallit-a) tamyiwent n [[tawsit (tudersent)|tewsit]] n [[Amaklas imezdi (tawsit)|''Cricetus'']] akken daɣen iga d talmest tamyiwent yettidiren s talɣa tazagrant (Sauvage) deg Uruppa tutrimt, Ɣas akken llan-d waṭas n isegduyen (Mesures) i taggaẓt d usnerni n telmest-a maca deg useggas n 2009 tettwameggez d akken-it (d yiwet gar n telmas n [[Timsuṭad|tesuṭaṭ]] yettwaggzen yakk s waṭas s umihi n [[angar|wengar]]) s unect (ɛla ḥsab) n [[tasmilt n Uruppa|tesmilt n Uruppa]]
 
 == Aglam ==
 ===Tasnileɣt===
