*Empty MediaWiki Message*

--- a/Amaklas_uṛɣan.mw
+++ b/Amaklas_uṛɣan.mw
@@ -12,7 +12,7 @@
 * [[Amaklas]]
 
 [[Taggayt:Timaklasin]]
-[[Timseɣẓaẓ]]
+[[Taggayt:Timseɣẓaẓ]]
 [[Taggayt:Iɣersiwen]]
 [[Taggayt:Iɣersiwen imegruden]]
 [[Taggayt:Timsuṭad]]
