*Empty MediaWiki Message*

--- a/Taɣeddiwt.mw
+++ b/Taɣeddiwt.mw
@@ -1,5 +1,5 @@
-{{Databox}}
-{{Autoarticle taxon}}
+{{Automatic taxobox}}
+'''Taɣeddiwt''' ([[Assaɣ ussnan]]: '''Cirsium''') d [[tawsit (tudersent)|tawsit]] n [[imɣi|yimɣan]] [[imɣi imezgi|imezgiyen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[titriyyin]]
 
 == Tilmas ==
 
