*Empty MediaWiki Message*

--- a/Tabuda_(Imɣi).mw
+++ b/Tabuda_(Imɣi).mw
@@ -1,5 +1,12 @@
 {{Automatic taxobox}}
 
+'''Tabuda''' ([[Assaɣ ussnan]]: '''Typha''') d [[tawsit (tudersent)|tawsit]] n [[imɣi|yimɣan]] [[Taynayawwin|iynayawwen]], Tawsit-a d tin yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tabudayt|tbudayt]],Yettwassnen ɣef [[talmest|telmas]] n tewsit-a d akken ttemɣayent-d deg yirawen neɣ idisan n Wanda llan [[aman|waman]] am igelmimen d [[abelma|ibelmaten]] d [[Asuf|isafen]] neɣ a umata deg yideggan [[Agri|igrawanen]]. Tabuda d yiwet n gar snat neɣ kṛad n [[tawsit (tudersent)|tewsitin]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tabudayt|tibudayin]] 
+
+== Aglam ==
+
+== Asexdem ==
+
+== Tilmas ==
 
 == Tilmas ==
 
