--- a/Taynayyawin.mw
+++ b/Taynayyawin.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Taynayawwin''' ([[Assaɣ ussnan]]: '''Monocotyledonae'''), Asmil n '''Liliopsida''' s unect (ɛla ḥsab) n [[Asismel n Cronquist|usismel n Cronquist]] neɣ [[afelfesna]] n '''Lilianae''' s unect n isismilen n [[Asismel n APG III|APG III]] yakk d [[Asismel n APG IV|APG IV]]. Tga d tagrawt n [[aynazɣer|taynazɣart]] anda llant gar-asent [[timesdurifsan]] d yimɣan yeǧǧuǧǧugen. [[Izegza]] anda tilqmatin-is sskanayent-d anagar yiwen n wayyan neɣ n tmejjet 
+'''Taynayyawin''' ([[Assaɣ ussnan]]: '''Monocotyledonae'''), Asmil n '''Liliopsida''' s unect (ɛla ḥsab) n [[Asismel n Cronquist|usismel n Cronquist]] neɣ [[afelfesna]] n '''Lilianae''' s unect n isismilen n [[Asismel n APG III|APG III]] yakk d [[Asismel n APG IV|APG IV]]. Tga d tagrawt n [[aynazɣer|taynazɣart]] anda llant gar-asent [[timesdurifsan]] d yimɣan yeǧǧuǧǧugen. [[Izegza]] anda tilqmatin-is sskanayent-d anagar yiwen n wayyan neɣ n tmejjet
 
 == Asismel ==
 
