--- a/Iberdeɣyal.mw
+++ b/Iberdeɣyal.mw
@@ -24,7 +24,7 @@ S unect n usismel n umnir n [[Aswir amsaylal agraɣlan|uswir amsaylal agraɣlan]
 == Ẓeṛ daɣen ==
 
 
-[[Taggayt:Tiwaculin n ijqiwen]]
+[[Taggayt:Tiwaculin n igṭaṭ]]
 [[Taggayt:Ijqiwen]]
 [[Taggayt:Iɣersiwen]]
 [[Taggayt:Igṭaṭ]]
