*Empty MediaWiki Message*

--- a/Iberdeɣyal.mw
+++ b/Iberdeɣyal.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Asudder''' ([[Assaɣ ussnan]]: '''Pycnonotidae''') d [[tawacult (tudersent)|tawacult]] n [[ijqiwen]] yebṭan ɣef 27 n [[tawsit (tasnudert)|tewsitin]] d ugar n 150 n [[talmest|telmas]] isuddiren
+'''Asudder''' ([[Assaɣ ussnan]]: '''Pycnonotidae''') d [[tawacult (tasnudert)|tawacult]] n [[ijqiwen]] yebṭan ɣef 27 n [[tawsit (tudersent)|tewsitin]] d ugar n 150 n [[talmest|telmas]] isuddiren
 
 == Tasnudert ==
 
