--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -1,5 +1,9 @@
 '''Adaras amessarti''' aswir amassaɣ deg [[amyellel|uzamug n yesmilen]] amedya deg [[tasartut n tesnudert|tsartut n tesnudert]] isimilen n tsurta n [[tamsartut|temsartut]] d: [[Talmest]], [[Tawsit (tudersent)|Tawsit]], [[tawacult (tasnudert)|tawacult]], [[asmil (tasnudert)|asmil]] ... Atg
 
+[[Asismel n Linné]] yessken-d amessdabu yettwasengel ar 7 n '''yidrasen igejdanen''' d 5 n '''yidrasen ussinen''' yettwaskan-d s usnay amnusruy (ordre décroissant), s talɣa ayyi: 
+
+ Imuddiren: '''[[Tagelda (tasnudert)|Tagelda]]''' → '''[[Astirf (tasnudert)|Adur]]''', '''[[Agzam (tasnudert)|Agzam]]''' → '''[[Asmil (tasnudert)|Asmil]]''' → '''[[Tafesna (tasnudert)|Tafesna]] '''→ '''[[tawacult (tasnudert)|Tawacult]]''' → [[Taɣreft (Tasartut)|Taɣreft]] → '''[[Tawsit (tudersent)|Tawsit]]''' → [[Tigezmi (tasnudert)|Tigezmi]] → [[Tamazrart (tasnudert)|Tamazrart]] → '''[[Talmest]]''' → [[Irzi]] → [[Talɣa (asismel)|Talɣa]]
+
 == Isimilen igejdanen ==
 {| class="wikitable" style="margin: 0 auto;"
 |colspan="4" align="center" bgcolor="#C1CDC1" | '''ismilen imesurta igejdanen'''
