*Empty MediaWiki Message*

--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -2,7 +2,7 @@
 
 [[Asismel n Linné]] yessken-d amessdabu yettwasengel ar 7 n '''yidrasen igejdanen''' d 5 n '''yidrasen ussinen''' yettwaskan-d s usnay amnusruy (ordre décroissant), s talɣa ayyi: 
 
- Imuddiren: '''[[Tagelda (tasnudert)|Tagelda]]''' → '''[[Astirf (tasnudert)|Adur]]''', '''[[Agzam (tasnudert)|Agzam]]''' → '''[[Asmil (tasnudert)|Asmil]]''' → '''[[Tafesna (tasnudert)|Tafesna]] '''→ '''[[tawacult (tasnudert)|Tawacult]]''' → [[Taɣreft (Tasartut)|Taɣreft]] → '''[[Tawsit (tudersent)|Tawsit]]''' → [[Tigezmi (tasnudert)|Tigezmi]] → [[Tamazrart (tasnudert)|Tamazrart]] → '''[[Talmest]]''' → [[Irzi]] → [[Talɣa (asismel)|Talɣa]]
+: Imuddiren: '''[[Tagelda (tasnudert)|Tagelda]]''' → '''[[Astirf (tasnudert)|Adur]]''', '''[[Agzam (tasnudert)|Agzam]]''' → '''[[Asmil (tasnudert)|Asmil]]''' → '''[[Tafesna (tasnudert)|Tafesna]] '''→ '''[[tawacult (tasnudert)|Tawacult]]''' → [[Taɣreft (Tasartut)|Taɣreft]] → '''[[Tawsit (tudersent)|Tawsit]]''' → [[Tigezmi (tasnudert)|Tigezmi]] → [[Tamazrart (tasnudert)|Tamazrart]] → '''[[Talmest]]''' → [[Irzi]] → [[Talɣa (asismel)|Talɣa]]
 
 == Isimilen igejdanen ==
 {| class="wikitable" style="margin: 0 auto;"
