*Empty MediaWiki Message*

--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -4,6 +4,8 @@
 
 : Imuddiren: '''[[Tagelda (tasnudert)|Tagelda]]''' → '''[[Astirf (tasnudert)|Adur]]''', '''[[Agzam (tasnudert)|Agzam]]''' → '''[[Asmil (tasnudert)|Asmil]]''' → '''[[Tafesna (tasnudert)|Tafesna]] '''→ '''[[tawacult (tasnudert)|Tawacult]]''' → [[Taɣreft (Tasartut)|Taɣreft]] → '''[[Tawsit (tudersent)|Tawsit]]''' → [[Tigezmi (tasnudert)|Tigezmi]] → [[Tamazrart (tasnudert)|Tamazrart]] → '''[[Talmest]]''' → [[Irzi]] → [[Talɣa (asismel)|Talɣa]]
 
+'''idrasen imernayen''' am: «adu» , «afel» gan d timerniwin ar isismilen igejdanen amdya: [[adu-twacult]], [[Afelfesna]] ...
+
 == Isimilen igejdanen ==
 {| class="wikitable" style="margin: 0 auto;"
 |colspan="4" align="center" bgcolor="#C1CDC1" | '''ismilen imesurta igejdanen'''
