*Empty MediaWiki Message*

--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -6,6 +6,8 @@
 
 '''idrasen imernayen''' am: «adu» , «afel» gan d timerniwin ar isismilen igejdanen amdya: [[adu-twacult]], [[Afelfesna]] ...
 
+'''[[Talmest]] tesskanay-d adras agejdan n usismel [[Tasensartut (tasnudert)|asensarti]], w yal tikkelt mi ara ad tali tseddart n usismel yettali wemcabi gar igmamen (imɣan, iɣersiwen, iberčečča...)
+
 == Isimilen igejdanen ==
 {| class="wikitable" style="margin: 0 auto;"
 |colspan="4" align="center" bgcolor="#C1CDC1" | '''ismilen imesurta igejdanen'''
