*Empty MediaWiki Message*

--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -6,7 +6,7 @@
 
 '''idrasen imernayen''' am: «adu» , «afel» gan d timerniwin ar isismilen igejdanen amdya: [[adu-twacult]], [[Afelfesna]] ...
 
-'''[[Talmest]] tesskanay-d adras agejdan n usismel [[Tasensartut (tasnudert)|asensarti]], w yal tikkelt mi ara ad tali tseddart n usismel yettali wemcabi gar igmamen (imɣan, iɣersiwen, iberčečča...)
+'''[[Talmest]]''' tesskanay-d adras agejdan n usismel [[Tasensartut (tasnudert)|asensarti]], w yal tikkelt mi ara ad tali tseddart n usismel yettali wemcabi gar igmamen (imɣan, iɣersiwen, iberčečča...)
 
 == Isimilen igejdanen ==
 {| class="wikitable" style="margin: 0 auto;"
