--- a/Iɣri_(imɣi).mw
+++ b/Iɣri_(imɣi).mw
@@ -11,7 +11,7 @@ Yettemɣay-d deg tmura yejban ɣef [[ilel agrakal]] akk d [[Turuft tutrimt]]
 * [[Iɣri awarẓaṛ]] 
 * [[Iɣri n unebdu]] (''Asphodelus aestivus'')
 
-== ẓeṛ daɣen ==
+== Aglam ==
 
 == Ismawen ==
 *Isem-is s latinit: Asphodelus microcarpus
