*Empty MediaWiki Message*

--- a/Iɣri_(imɣi).mw
+++ b/Iɣri_(imɣi).mw
@@ -13,12 +13,7 @@ Yettemɣay-d deg tmura yejban ɣef [[ilel agrakal]] akk d [[Turuft tutrimt]]
 
 == Aglam ==
 
-== Ismawen ==
-*Isem-is s latinit: Asphodelus microcarpus
-*Isem-is s tefransist: Asphodèle de Villars
-*Ismawen-is nniḍen s teqbaylit: Abeṛwaq<ref>'Plantes médicinales de Kabylie' - Mohand Aïd Youssef - Ibis Press -Paris 2006</ref>
-*Ismawen-is nniḍen s tmaziɣt: 
-
+== Asismel ==
 
 == Isseqdac ==
 
