--- a/Iɣri_(imɣi).mw
+++ b/Iɣri_(imɣi).mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-[[Tugna:Aberwaq.jpg|thumb|[[Ifri n unebdu]] <ref>'Imɣan n Tensawt - Plantes de Kabylie ' - Saïd Zidat - Editions Innexsys, Luxembourg, Avril 2016 <nowiki>ISBN 978-99959-0-205-6</nowiki>  www.imghantensawt.lu</ref> - Asphodelus microcarpus]]
+[[Tugna:Aberwaq.jpg|thumb|[[Iɣri n unebdu]] <ref>'Imɣan n Tensawt - Plantes de Kabylie ' - Saïd Zidat - Editions Innexsys, Luxembourg, Avril 2016 <nowiki>ISBN 978-99959-0-205-6</nowiki>  www.imghantensawt.lu</ref> - Asphodelus microcarpus]]
 
 '''Iɣri''' (Yettwassen s: ''Aberweq'' dɣa yusa-d seg Teɛrabt ''البروق''), ([[assaɣ usnan]]: ''Asphodelus'') d [[Tawsit|tawsit]] n [[imɣi|yemɣan]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tiɣrit|teɣrit]] dges azal n 15 n [[Talmest|telmas]].
 
