*Empty MediaWiki Message*

--- a/Iɣri_(imɣi).mw
+++ b/Iɣri_(imɣi).mw
@@ -7,9 +7,10 @@
 Yettemɣay-d deg tmura yejban ɣef [[ilel agrakal]] akk d [[Turuft tutrimt]]
 
 == Tilmas == 
-* [[Iɣri amellal]] (''Asphodelus albus'')
+* [[Iɣri amellal]] - (''Asphodelus albus'')
 * [[Iɣri awarẓaṛ]] 
-* [[Iɣri n unebdu]] (''Asphodelus aestivus'')
+* [[Iɣri n unebdu]] - (''Asphodelus aestivus'')
+* [[Iɣri n unebdu]] - (''Asphodelus microcarpus'')
 
 == Aglam ==
 
