*Empty MediaWiki Message*

--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -41,4 +41,4 @@
 |}
 
 == Idrasen imessartiyen igejdanen ==
-Idrasen imessartiyen
+Idrasen imessartiyen ttwasxedmen deg [[tinnagrawt]] i [[tasartut n tesnudert usismel]]
