*Empty MediaWiki Message*

--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -41,4 +41,5 @@
 |}
 
 == Idrasen imessartiyen igejdanen ==
-Idrasen imessartiyen ttwasxedmen deg [[tinnagrawt]] i [[tasartut n tesnudert|wsismel]]
+Idrasen imessartiyen ttwasxedmen deg [[tinnagrawt]] i [[tasartut n tesnudert|wsismel]] 
+(s usnay amnursuy):
