*Empty MediaWiki Message*

--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -1,6 +1,6 @@
 '''Adaras amessarti''' aswir amassaɣ deg [[amyellel|uzamug n yesmilen]] amedya deg [[tasartut n tesnudert|tsartut n tesnudert]] isimilen n tsurta n [[tamsartut|temsartut]] d: [[Talmest]], [[Tawsit (tudersent)|Tawsit]], [[tawacult (tasnudert)|tawacult]], [[asmil (tasnudert)|asmil]] ... Atg
 
-[[Asismel n Linné]] yessken-d amessdabu yettwasengel ar 7 n '''yidrasen igejdanen''' d 5 n '''yidrasen ussinen''' yettwaskan-d s usnay amnusruy (ordre décroissant), s talɣa ayyi: 
+[[Asismel n Linné]] yessken-d amessdabu yettwasengel ar 7 n '''yidrasen igejdanen''' d 5 n '''yidrasen ussinen''' yettwaskan-d s usnay amnursuy (ordre décroissant), s talɣa ayyi: 
 
 : Imuddiren: '''[[Tagelda (tasnudert)|Tagelda]]''' → '''[[Astirf (tasnudert)|Adur]]''', '''[[Agzam (tasnudert)|Agzam]]''' → '''[[Asmil (tasnudert)|Asmil]]''' → '''[[Tafesna (tasnudert)|Tafesna]] '''→ '''[[tawacult (tasnudert)|Tawacult]]''' → [[Taɣreft (Tasartut)|Taɣreft]] → '''[[Tawsit (tudersent)|Tawsit]]''' → [[Tigezmi (tasnudert)|Tigezmi]] → [[Tamazrart (tasnudert)|Tamazrart]] → '''[[Talmest]]''' → [[Irzi]] → [[Talɣa (asismel)|Talɣa]]
 
