*Empty MediaWiki Message*

--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -43,3 +43,13 @@
 == Idrasen imessartiyen igejdanen ==
 Idrasen imessartiyen ttwasxedmen deg [[tinnagrawt]] i [[tasartut n tesnudert|wsismel]] 
 (s usnay amnursuy):
+
+* [[Amenkud(tasnudert)|Amenkud]], [[Taɣult (tasnudert)|Afuɣal]], [[Taɣult (tasnudert)|Taɣult]] (''Superregnum, Imperium, Dominium'')
+* '''[[Tagelda]]''' ('''Regnum''') 
+* [[Adu-tgelda]] (''Subregnum'') 
+* [[Afurk (tasnudert)|Afurk]] (''Ramus'', « ''branch'' » s Teglizit)
+* [[Azdar-tgelda]] (''Infraregnum'')
+** [[Afel-adur]], [[Agzam|Afel-agzam]] (''Superphylum, Superdivisio'') 
+** [[Adu-wadur]], [[Adu-gzam]] (''Subphylum, Subdivisio'')
+** [[Azdar-adur]] (''Infraphylum'') 
+*** '''[[Ifelasmil]]''' ('''Classis''')
