*Empty MediaWiki Message*

--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -53,3 +53,10 @@ Idrasen imessartiyen ttwasxedmen deg [[tinnagrawt]] i [[tasartut n tesnudert|wsi
 ** [[Adu-wadur]], [[Adu-gzam]] (''Subphylum, Subdivisio'')
 ** [[Azdar-adur]] (''Infraphylum'') 
 *** '''[[Ifelasmil]]''' ('''Classis''')
+*** [[Adu-smil]] (''Subclassis'') 
+*** [[Azdar-smil]] (''Infraclassis'') 
+**** [[Afelfesna]] (''Superordo'') 
+**** '''[[Tafesna]]''' ('''Ordo''') 
+**** [[Adu-tfesna]] (''Subordo'') 
+**** [[Azdar-tfesna]] (''Infraordo'') 
+**** [[Imzik-tfesna]] (''Microordo'')
