--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -56,7 +56,7 @@ Idrasen imessartiyen ttwasxedmen deg [[tinnagrawt]] i [[tasartut n tesnudert|wsi
 *** [[Adu-smil]] (''Subclassis'') 
 *** [[Azdar-smil]] (''Infraclassis'') 
 **** [[Afelfesna]] (''Superordo'') 
-**** '''[[Tafesna]]''' ('''Ordo''') 
+**** '''[[Tafesna (tasnudert)|Tafesna]]''' ('''Ordo''') 
 **** [[Adu-tfesna]] (''Subordo'') 
 **** [[Azdar-tfesna]] (''Infraordo'') 
 **** [[Imzik-tfesna]] (''Microordo'')
