*Empty MediaWiki Message*

--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -53,6 +53,7 @@ Idrasen imessartiyen ttwasxedmen deg [[tinnagrawt]] i [[tasartut n tesnudert|wsi
 ** [[Adu-wadur]], [[Adu-gzam]] (''Subphylum, Subdivisio'')
 ** [[Azdar-adur]] (''Infraphylum'') 
 *** '''[[Ifelasmil]]''' ('''Classis''')
+*** [[Asmil (tasnudert)|Asmil]] (''Classis'')
 *** [[Adu-smil]] (''Subclassis'') 
 *** [[Azdar-smil]] (''Infraclassis'') 
 **** [[Afelfesna]] (''Superordo'') 
