*Empty MediaWiki Message*

--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -52,8 +52,8 @@ Idrasen imessartiyen ttwasxedmen deg [[tinnagrawt]] i [[tasartut n tesnudert|wsi
 ** [[Afel-adur]], [[Agzam|Afel-agzam]] (''Superphylum, Superdivisio'') 
 ** [[Adu-wadur]], [[Adu-gzam]] (''Subphylum, Subdivisio'')
 ** [[Azdar-adur]] (''Infraphylum'') 
-*** '''[[Ifelasmil]]''' ('''Classis''')
-*** [[Asmil (tasnudert)|Asmil]] (''Classis'')
+*** ''[[Ifelasmil]]'' (''Classis'')
+*** '''[[Asmil (tasnudert)|Asmil]]''' ('''Classis''')
 *** [[Adu-smil]] (''Subclassis'') 
 *** [[Azdar-smil]] (''Infraclassis'') 
 **** [[Afelfesna]] (''Superordo'') 
