*Empty MediaWiki Message*

--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -1,4 +1,4 @@
-'''Adaras amessarti''' aswir amassaɣ deg [[amyellel|uzamug n yesmilen]] amedya deg [[tasartut n tesnudert|tsartut n tesnudert]] isimilen n tsurta n [[tamsartut|temsartut]] d: [[Talmest]], [[Tawsit (tudersent)|Tawsit]], [[tawacult (tasnudert)|tawacult]], [[asmil (tasnudert)|asmil]] ... Atg
+'''Adaras amessarti''' d aswir amassaɣ deg [[amyellel|uzamug n yesmilen]] amedya deg [[tasartut n tesnudert|tsartut n tesnudert]] isimilen n usismel n [[tamsartut|temsartut]] d: [[Talmest]], [[Tawsit (tudersent)|Tawsit]], [[tawacult (tasnudert)|tawacult]], [[asmil (tasnudert)|asmil]] ... Atg
 
 [[Asismel n Linné]] yessken-d amessdabu yettwasengel ar 7 n '''yidrasen igejdanen''' d 5 n '''yidrasen ussinen''' yettwaskan-d s usnay amnursuy (ordre décroissant), s talɣa ayyi: 
 
