--- a/Tasenɣersiwt.mw
+++ b/Tasenɣersiwt.mw
@@ -1,5 +1,8 @@
 '''Tasnaɣersiwt''' d [[tarrayt tusnant]] yeɣɣaren ɣef [[aɣersiw|iɣersiwen]], Tasnaɣersiwt d angaz seg [[tasnudert]] dgi tella daɣen tɣuri n [[imɣan|yemɣan]] umi qqaren [[tasnimɣan]]
 
+
+[[Taggayt:Tasnudert]]
+
 == Isimilen d istirfen n [[aɣersiw|tgelda n uɣersiw]] ==
 Tettwasismel (tettwagzam) tagelda n iɣersiwen ar sin n ismilen (igezzumen)
 
