--- a/Tawsit_(tudersent).mw
+++ b/Tawsit_(tudersent).mw
@@ -7,4 +7,4 @@ Yal talmest tezmer ad tesɛu aṭas [[adu-talmest|adu-tilmas]]: [[tuggta (tazegz
 
 Tawsit talsant semman-as [[Homo]].
 
-[[Category:tudersent]]
+[[Category:tasnudert]]
