*Empty MediaWiki Message*

--- a/Awerǧeǧǧi.mw
+++ b/Awerǧeǧǧi.mw
@@ -1,5 +1,6 @@
+{{Automatic taxobox}}
 [[Tugna:Lyristes_plebejus2.jpg|right|200px|thumb|'''Warẓigen''' (Lyristes plebejus)]]
-'''Warẓigen''' d [[abeɛɛuc]]-nni yettsuɣun deg unebdu. Yemgarad wamek ay s-qqaren deg tmiwa timaziɣwalin, yernu tudert-is tessewham, aṭas n medden ur tt-nessin ara. Amur ameqqran deg-neɣ ssnen kan dakken warẓigen itteffeɣ-d deg unebdu i wakken ad aɣ-yesseḥreq s usuɣu-nni-yines. D acu kan, warẓigen mačči ala deg unebdu kan ay yettidir, wanag taḥkayt-is ɣezzifet.
+'''iwarẓigen''' d [[tawacult (tasnudert)|tawacult]] n [[aburɣas|iburɣas]] yettsuɣun deg unebdu. Yemgarad wamek ay s-qqaren deg tmiwa timaziɣwalin, yernu tudert-is tessewham, aṭas n medden ur tt-nessin ara. Amur ameqqran deg-neɣ ssnen kan dakken warẓigen itteffeɣ-d deg unebdu i wakken ad aɣ-yesseḥreq s usuɣu-nni-yines. D acu kan, warẓigen mačči ala deg unebdu kan ay yettidir, wanag taḥkayt-is ɣezzifet.
 
 Deg [[Tamurt n Leqbayel|Tmurt n Leqbayel]] warẓigen yesɛa aṭas n yismawen : qqaren-as ''warẓigen'' neɣ ''awerǧeǧǧiḍ'' (neɣ ''werǧeǧǧi'', ''awerǧeǧǧin'', ''iwrejrej'', ''warjejig'') deg Yiwaḍiyen akk d tmiwa ay ten-id-iqerben, ''ẓẓdec'' (neɣ ''ẓẓdeč'', ''ẓẓdeǧ'', ''tteẓẓdeč'') deg kra n tmiwa nniḍen. Qqaren-as daɣen ''abẓiẓ'' deg tama n Ɛin Lḥemmam neɣ ''awejwaj'' deg [[jijel]] d Agmuḍ n [[bgayet]]. Yella daɣen wawal ''warẓigen'' (neɣ ''warzigen'', ''arzug''), acku yettakk anzi ɣer "wa iẓeggen" d isem n ubeɛɛuc-agi s tmaheɣt- akk d "awerǧeǧǧiḍ", d isem yesɛan talɣa talugant,  nezmer ad d-nessuddem seg-s asget war uguren (awerǧeǧǧiḍ > iwerǧeǧǧiḍen).
 
