*Empty MediaWiki Message*

--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -66,3 +66,12 @@ Idrasen imessartiyen ttwasxedmen deg [[tinnagrawt]] i [[tasartut n tesnudert|wsi
 ***** [[Adu-twacult]] (''Subfamilia'')
 ***** [[Taɣreft (Tasartut)|Taɣreft]] (''Tribus'') 
 ***** [[Taɣreft (Tasartut)|Adu-teɣreft]] (''Subtribus'')
+****** '''[[Tawsit (tudersent)|Tawsit]]''' ('''Genus''') 
+****** [[Adu-tewsit]] (''Subgenus':) 
+****** [[Tigezmi (tasnudert)|Tigezmi]] (''Sectio'')
+****** [[Adu-tgezmi (tasnudert)|Adu-tgezmi]] (''Subsectio'')
+******* '''[[Talmest]]''' ('''Species''') 
+******* [[Adu-telmest]] (''subspecies'')- [[Adras (tasnudert)|Adras asnudran) amaddud aneggar 
+******* [[Irzi]], [[Azɣer (tasnudert)|Azɣer]] gan d idrasen isnudranen irmadduden (arunṣib) 
+******* [[Adu-rzi]] (''subvarietas'') - [[Adu-zɣer]] gan d idrasen isnudranen irmadduden
+*******
