--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -74,4 +74,5 @@ Idrasen imessartiyen ttwasxedmen deg [[tinnagrawt]] i [[tasartut n tesnudert|wsi
 ******* [[Adu-telmest]] (''subspecies'')- [[Adras (tasnudert)|Adras asnudran) amaddud aneggar 
 ******* [[Irzi]], [[Azɣer (tasnudert)|Azɣer]] gan d idrasen isnudranen irmadduden (arunṣib) 
 ******* [[Adu-rzi]] (''subvarietas'') - [[Adu-zɣer]] gan d idrasen isnudranen irmadduden
-*******
+******* [[Talɣa (asismel)|Talɣa]] (''Forma'')
+******* [[Adu-telɣa]] (''Subforma'')
