*Empty MediaWiki Message*

--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -76,3 +76,8 @@ Idrasen imessartiyen ttwasxedmen deg [[tinnagrawt]] i [[tasartut n tesnudert|wsi
 ******* [[Adu-rzi]] (''subvarietas'') - [[Adu-zɣer]] gan d idrasen isnudranen irmadduden
 ******* [[Talɣa (asismel)|Talɣa]] (''Forma'')
 ******* [[Adu-telɣa]] (''Subforma'')
+
+== Ẓeṛ daɣen ==
+* [[Tasartut n tesnudert]]
+
+[[Taggayt:Tasnudert]]
