--- a/Asismel_n_tesnudert.mw
+++ b/Asismel_n_tesnudert.mw
@@ -48,3 +48,6 @@ S akin, S [[Tanflit|tneflit]] n tussna rnan-t-d kra n tsurta tisnawanin:
 * [[Talmest]]
 
 * [[Adu-telmest]]
+
+
+[[Taggayt:tasnudert]]
