*Empty MediaWiki Message*

--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -4,7 +4,7 @@
 
 : Imuddiren: '''[[Tagelda (tasnudert)|Tagelda]]''' → '''[[Astirf (tasnudert)|Adur]]''', '''[[Agzam (tasnudert)|Agzam]]''' → '''[[Asmil (tasnudert)|Asmil]]''' → '''[[Tafesna (tasnudert)|Tafesna]] '''→ '''[[tawacult (tasnudert)|Tawacult]]''' → [[Taɣreft (Tasartut)|Taɣreft]] → '''[[Tawsit (tudersent)|Tawsit]]''' → [[Tigezmi (tasnudert)|Tigezmi]] → [[Tamazrart (tasnudert)|Tamazrart]] → '''[[Talmest]]''' → [[Irzi]] → [[Talɣa (asismel)|Talɣa]]
 
-'''idrasen imernayen''' am: «adu» , «afel» gan d timerniwin ar isismilen igejdanen amdya: [[adu-twacult]], [[Afelfesna]] ...
+'''idrasen imernayen''' am: «adu» , «afel», «azdar» gan d timerniwin ar isismilen igejdanen amdya: [[adu-twacult]], [[Afelfesna]], [[Azdar-adur]] ...
 
 '''[[Talmest]]''' tesskanay-d adras agejdan n usismel [[Tasensartut (tasnudert)|asensarti]], w yal tikkelt mi ara ad tali tseddart n usismel yettali wemcabi gar igmamen (imɣan, iɣersiwen, iberčečča...)
 
