*Empty MediaWiki Message*

--- a/Assaɣ_ussnan.mw
+++ b/Assaɣ_ussnan.mw
@@ -1,4 +1,4 @@
-Deg [[Tasnudert|tesnudert]], '''Assaɣ ussnan''' (s [[Taglizit|Teglizit]]: ''Binomial nomenclature'') d isem n tarrayt tamaddudt (tunṣibt) i wsemmi d usiseɣ n [[amuddir|telmas n imuddiren]] id yessers [[Asnudran|umusnaw n tesnudert]] [[Carl Von Linné]], <br/>
+Deg [[Tasnudert|tesnudert]], '''Assaɣ ussnan''' neɣ '''Asiseɣ imisin''' (s [[Taglizit|Teglizit]]: ''Binomial nomenclature'') d isem n tarrayt tamaddudt (tunṣibt) i wsemmi d usiseɣ n [[amuddir|telmas n imuddiren]] id yessers [[Asnudran|umusnaw n tesnudert]] [[Carl Von Linné]], <br/>
 Akken id yesskanay wawal-a, Assaɣ ussnan  yesskanay d akken isem yettwaska (yettwabna) ɣef tasuddest n sin n wawalen 
 
 * Assaɣ agejdan n [[tawsit (tudersent)|tewsit]]
