*Empty MediaWiki Message*

--- a/Asismel_n_Linné.mw
+++ b/Asismel_n_Linné.mw
@@ -1,4 +1,9 @@
-'''Asismel n Linné''' deg [[tussniwin tigmawin]] d [[tamudemt]] n usenmala n [[talmest|telmas]] n [[Amuddir|imuddiren]], Anda [[Carl Von Linné|Linné]] yexdem ɣef usnefli d usherri (asewseɛ) n unagraw n usismel n [[Aristot]] d 
+'''Asismel n Linné''' deg [[tussniwin tigmawin]] d [[tamudemt]] n usenmala n [[talmest|telmas]] n [[Amuddir|imuddiren]], Anda [[Carl Von Linné|Linné]] yexdem ɣef usnefli d usherri (asewseɛ) n unagraw n usismel n [[Aristot]] d usmutti-ynes (convertir) ar unagraw ussnan, Akken ig gguni Linné -akken ig gguni Aristot daɣen- ɣef telɣa n umuddir d tkeli-ynes deg twennaṭṭ-is. Tarrayt n Linné deg usemmi n [[Amuddir|imuddiren]] tettwasemma s [[assaɣ ussnan|usiseɣ imisin]], dɣa d anecta ig sbadun (ig meyyzen) gar n unagraw-is d unagraw n Aristot yerna zeddiɣ (mazal-it) ibedd ar ass-a 
 
+== Asudes n temsurta ==
+
+== Isismilen yemgaraden ==
+
+== Ẓeṛ daɣen ==
 
 [[Taggayt:tasnudert]]
