--- a/Tinnagrawt_tanemhazt.mw
+++ b/Tinnagrawt_tanemhazt.mw
@@ -1,6 +1,6 @@
 '''Tinnagrawt tanemhazt''' d aɣerbaz n [[tinnagrawt|tennagrawt]] adɣa [[tasensartut (tasnudert)|tasensartut]]
 
-== Isnasen ussinen ==
+== igensasen ==
 
 == Ẓeṛ daɣen == 
 
