*Empty MediaWiki Message*

--- a/Tinnagrawt_tanemhazt.mw
+++ b/Tinnagrawt_tanemhazt.mw
@@ -1,5 +1,7 @@
 '''Tinnagrawt tanemhazt''' d aɣerbaz n [[tinnagrawt|tennagrawt]] adɣa [[tasensartut (tasnudert)|tasensartut]]
 
+Deg [[tasnudert|tesnudert]] irem n «tnemhezt» yettwasexdem daɣen i wakken ad imeggez kra n teẓra n [[tamhazt|temhazt]] ([[Taderwint]] , [[Tiẓri tuddist n temhazt|Taderwintrart]], [[Tiẓri tarrawsant n temhazt|Tirrewsent]] ...) yessegzaw-d asmuti (abeddil) n telmas s uzray n [[addar awesnaka|talliyin]]
+
 == igensasen ==
 
 == Ẓeṛ daɣen == 
