*Empty MediaWiki Message*

--- a/Tinnagrawt_tanemhazt.mw
+++ b/Tinnagrawt_tanemhazt.mw
@@ -1,3 +1,6 @@
+[[Tugna:Tree of Living Organisms 2.png|Thumb|250px|[[Aseklu n temhazɣert]], s unect n wanaw n tennagrawt tanemhazt]] 
+
+
 '''Tinnagrawt tanemhazt''' d aɣerbaz n [[tinnagrawt|tennagrawt]] adɣa [[tasensartut (tasnudert)|tasensartut]]
 
 Deg [[tasnudert|tesnudert]] irem n «tnemhezt» yettwasexdem daɣen i wakken ad imeggez kra n teẓra n [[tamhazt|temhazt]] ([[Taderwint]] , [[Tiẓri tuddist n temhazt|Taderwintrart]], [[Tiẓri tarrawsant n temhazt|Tirrewsent]] ...) yessegzaw-d asmuti (abeddil) n telmas s uzray n [[addar awesnaka|talliyin]]
