*Empty MediaWiki Message*

--- a/Adu-tgelda.mw
+++ b/Adu-tgelda.mw
@@ -35,3 +35,10 @@ Deg [[Asismel n Linné|usismel aklasik]] '''Adu-tgelda''' d aswir anemmas, srid 
 ******* [[Adu-rzi]] (''subvarietas'') - [[Adu-zɣer]] gan d idrasen isnudranen irmadduden
 ******* [[Talɣa (asismel)|Talɣa]] (''Forma'')
 ******* [[Adu-telɣa]] (''Subforma'')
+
+== Ẓeṛ daɣen ==
+* [[Tagelda (tasnudert)|tagelda]]
+* [[Aswag]]
+* [[Amenkud (tasnudert)|Amenkud]]
+
+[[Taggayt:idrasen imessartiyen]]
