*Empty MediaWiki Message*

--- a/Afurk_(tasnudert).mw
+++ b/Afurk_(tasnudert).mw
@@ -35,3 +35,8 @@ G [[tasensartut (tasnudert)|tasensartut]], '''Afurk''' (s Tlatint «''ramus''»,
 ******* [[Adu-rzi]] (''subvarietas'') - [[Adu-zɣer]] gan d idrasen isnudranen irmadduden
 ******* [[Talɣa (asismel)|Talɣa]] (''Forma'')
 ******* [[Adu-telɣa]] (''Subforma'')
+
+== Ẓeṛ daɣen ==
+* [[Talmest]]
+
+[[Taggayt:idrasen imessartiyen]]
